--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-infinite-scroll": "^2.0.2",
+    "vue-loading-overlay": "6.0",
+    "vue-pull-infinite-scroller": "^1.0.4",
     "vue-router": "^4.2.2",
     "vuex": "^4.1.0"
   },
