--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ag-grid-vue3": "^30.0.0",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "datatables.net-select": "^1.6.2",
+    "datatables.net-vue3": "^2.1.1",
     "vue": "^3.2.13",
     "vue-infinite-scroll": "^2.0.2",
     "vue-loading-overlay": "6.0",
