--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {            "no-unused-vars": "off" 
+  }
   },
   "browserslist": [
     "> 1%",
